--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,10 @@
 {
   "root": true,
-  "extends": ["@nuxt/eslint-config", "@nuxtjs/eslint-config-typescript"]
+  "extends": [
+    "@nuxt/eslint-config",
+    "@nuxtjs/eslint-config-typescript"
+  ],
+  "rules": {
+    "vue/multi-word-component-names": "off"
+  }
 }
