--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxt/image": "^1.1.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "eslint": "^8.56.0",
+    "eslint-plugin-security": "^2.1.0",
     "nuxt": "^3.9.1",
     "postcss": "^8.4.32",
     "postcss-html": "^1.5.0",
