--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "root": true,
   "extends": [
     "@nuxt/eslint-config",
-    "@nuxtjs/eslint-config-typescript"
+    "@nuxtjs/eslint-config-typescript",
+    "plugin:security/recommended-legacy"
   ],
   "rules": {
     "vue/multi-word-component-names": "off"
