logger の仕組みを変更

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 NUXT_PUBLIC_PAGE_BASE_URL=http://localhost:3000
 NUXT_PUBLIC_QIITA_ACCESS_TOKEN=token
+
+NUXT_PUBLIC_LOG_LEVEL='ログレベル(数値) 0:fatal, 1:warn, 2:log, 3:info, 4:debug, 5:trace'
