--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "extends": "../.nuxt/tsconfig.server.json"
+  "extends": "../.nuxt/tsconfig.server.json",
+  "compilerOptions": {
+    "verbatimModuleSyntax": true,
+    "ignoreDeprecations": "5.0"
+  }
 }
