--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,68 @@
 {
   "root": true,
+  "env": {
+    "browser": true,
+    "node": true
+  },
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": [
+    "promise",
+    "import",
+    "unused-imports"
+  ],
   "extends": [
+    "standard",
+    "plugin:import/recommended",
+    "plugin:import/typescript",
     "@nuxt/eslint-config",
     "@nuxtjs/eslint-config-typescript",
     "plugin:security/recommended-legacy"
   ],
+  "settings": {
+    "import/resolver": {
+      "typescript": true,
+      "node": true
+    }
+  },
   "rules": {
-    "vue/multi-word-component-names": "off"
+    "vue/multi-word-component-names": "off",
+    /* eslint-plugin-import */
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "parent",
+          "sibling",
+          "index"
+        ],
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        },
+        "pathGroups": [
+          {
+            "pattern": "#*",
+            "group": "builtin"
+          },
+          {
+            "pattern": "assets/**",
+            "group": "index",
+            "position": "before"
+          },
+          {
+            "pattern": "public/**",
+            "group": "index",
+            "position": "before"
+          }
+        ]
+      }
+    ],
+    /* eslint-plugin-unused-imports */
+    "unused-imports/no-unused-imports": "error"
   }
 }
