--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/image": "^1.2.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-security": "^2.1.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "nuxt": "^3.9.1",
     "postcss": "^8.4.32",
     "postcss-html": "^1.6.0",
