--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install Dependencies
         run: npm ci
-      - name: Run Type Check
-        run: npm run typecheck
       - name: Run lint
         run: npm run lint
+      - name: Run Build (and Type Check)
+        run: npm run build
