--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -20,6 +20,8 @@ jobs:
 
       - name: Install Dependencies
         run: npm ci
+      - name: Run Test Unit
+        run: npm run test:ut
       - name: Run lint
         run: npm run lint
       - name: Run Build (and Type Check)
