--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/image": "^1.2.0",
+    "@nuxt/test-utils": "^3.10.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@typescript-eslint/parser": "^6.19.1",
+    "@vitest/coverage-v8": "^1.2.2",
+    "@vue/test-utils": "^2.4.4",
     "@vueuse/core": "^10.7.2",
     "@vueuse/nuxt": "^10.7.2",
     "eslint": "^8.56.0",
@@ -30,7 +33,9 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-security": "^2.1.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "happy-dom": "^13.3.1",
     "nuxt": "^3.9.1",
+    "playwright-core": "^1.41.1",
     "postcss": "^8.4.32",
     "postcss-html": "^1.6.0",
     "postcss-scss": "^4.0.9",
@@ -44,6 +49,7 @@
     "stylelint-order": "^6.0.4",
     "stylelint-scss": "^6.0.0",
     "typescript": "^5.3.3",
+    "vitest": "^1.2.2",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5",
     "vue-tsc": "^1.8.27"
