--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/image": "^1.2.0",
     "@nuxt/test-utils": "^3.10.0",
+    "@playwright/test": "^1.41.2",
+    "@types/node": "^20.11.19",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitest/coverage-v8": "^1.2.2",
     "@vue/test-utils": "^2.4.4",
