--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "format": "npm run format:e && npm run format:s",
     "format:e": "npm run lint:e -- --fix",
     "format:s": "npm run lint:s -- --fix",
-    "test:ut": "vitest run"
+    "test:ut": "vitest run",
+    "test:vrt": "playwright test -c playwright.config.vrt.ts",
+    "test:vrt:us": "npm run test:vrt -- --update-snapshots",
+    "test:vrt:sr": "playwright show-report",
+    "test:vrt:ui": "npm run test:vrt -- --ui"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
