--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run VRT tests
-        run: npm run test:vrt
+        run: npm run build:vrt && npm run test:vrt
       - uses: actions/upload-artifact@v3
         if: always()
         with:
