--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
+    "build": "nuxt build --dotenv .env",
+    "build:vrt": "VRT=true npm run build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -15,12 +16,17 @@
     "format": "npm run format:e && npm run format:s",
     "format:e": "npm run lint:e -- --fix",
     "format:s": "npm run lint:s -- --fix",
-    "test:ut": "vitest run"
+    "test:ut": "vitest run",
+    "test:vrt": "playwright test -c playwright-vrt.config.ts",
+    "test:vrt:us": "npm run test:vrt -- --update-snapshots",
+    "test:vrt:ui": "npm run test:vrt -- --ui"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/image": "^1.2.0",
     "@nuxt/test-utils": "^3.10.0",
+    "@playwright/test": "^1.41.2",
+    "@types/node": "^20.11.19",
     "@typescript-eslint/parser": "^7.1.0",
     "@vitest/coverage-v8": "^1.2.2",
     "@vue/test-utils": "^2.4.4",
@@ -34,8 +40,10 @@
     "eslint-plugin-security": "^2.1.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "happy-dom": "^13.3.5",
+    "msw": "^2.2.1",
     "nuxt": "^3.10.3",
     "playwright-core": "^1.41.1",
+    "playwright-msw": "^3.0.1",
     "postcss": "^8.4.34",
     "postcss-html": "^1.6.0",
     "postcss-scss": "^4.0.9",
@@ -68,5 +76,10 @@
   "volta": {
     "node": "20.11.1",
     "npm": "10.2.4"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
