--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "vite-svg-loader": "^5.1.0"
   },
   "engines": {
-    "node": "^20.11.1",
-    "npm": "^10.2.4"
+    "node": "^20.11.x",
+    "npm": "^10.2.x"
   },
   "volta": {
     "node": "20.11.1",
