--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,6 +21,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+      - name: Install dependencies
+        run: npm ci
       - name: Run VRT Build
         run: npm run build:vrt
       - name: Install Playwright Browsers
