--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -9,8 +9,6 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    # container:
-    #   image: mcr.microsoft.com/playwright:v1.41.1-jammy
     strategy:
       matrix:
         node-version: [20.11.1]
@@ -29,15 +27,35 @@ jobs:
         run: npm run lint
       - name: Run Unit Test
         run: npm run test:ut
-      # - name: Run VRT Build
-      #   run: VRT=true npm run build
-      # - name: Install Playwright Browsers
-      #   run: npx playwright install --with-deps
-      # - name: Run VRT tests
-      #   run: npm run test:vrt
-      # - uses: actions/upload-artifact@v3
-      #   if: always()
-      #   with:
-      #     name: playwright-report
-      #     path: playwright-report/
-      #     retention-days: 30
+
+  vrt-with-playwright:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.41.1-jammy
+    strategy:
+      matrix:
+        node-version: [20.11.1]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - name: Install dependencies
+        run: npm ci
+      - name: Run VRT Build
+        run: npm run build:vrt
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps chrome msedge
+      - name: Run VRT tests
+        run: npm run test:vrt
+        env:
+          HOME: /root
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
