dprint の設定ファイルとスクリプトを追加

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "typecheck": "nuxi typecheck",
-    "lint": "npm run lint:e && npm run lint:s",
+    "lint": "npm run lint:d && npm run lint:e && npm run lint:s",
+    "lint:d": "dprint check",
     "lint:e": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
     "lint:s": "stylelint '**/*.{css,scss,vue}' --ignore-path .gitignore",
-    "format": "npm run format:e && npm run format:s",
+    "format": "npm run format:d && npm run format:e && npm run format:s",
+    "format:d": "dprint fmt",
     "format:e": "npm run lint:e -- --fix",
     "format:s": "npm run lint:s -- --fix",
     "test:ut": "vitest run",
