--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,8 @@
     }
   },
   "rules": {
+    "operator-linebreak": "off",
+    "space-before-function-paren": "off",
     "vue/multi-word-component-names": "off",
     /* eslint-plugin-import */
     "import/order": [
