--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "typecheck": "nuxi typecheck",
-    "lint": "npm run lint:e && npm run lint:s",
+    "lint": "npm run lint:d && npm run lint:e && npm run lint:s",
+    "lint:d": "dprint check",
     "lint:e": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
     "lint:s": "stylelint '**/*.{css,scss,vue}' --ignore-path .gitignore",
-    "format": "npm run format:e && npm run format:s",
+    "format": "npm run format:d && npm run format:e && npm run format:s",
+    "format:d": "dprint fmt",
     "format:e": "npm run lint:e -- --fix",
     "format:s": "npm run lint:s -- --fix",
     "test:ut": "vitest run",
@@ -32,6 +34,7 @@
     "@vue/test-utils": "^2.4.4",
     "@vueuse/core": "^10.7.2",
     "@vueuse/nuxt": "^10.7.2",
+    "dprint": "^0.45.0",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
