--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "editor.defaultFormatter": "dprint.dprint",
   "editor.formatOnSave": true,
   "[markdown]": {
     "editor.formatOnSave": false
