playwright の実行におけるエラー修正

--- a/package.json
+++ b/package.json
@@ -72,6 +72,9 @@
     "snakecase-keys": "^6.0.0",
     "vite-svg-loader": "^5.1.0"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
+  },
   "engines": {
     "node": "^20.11.x",
     "npm": "^10.2.x"
