--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "sass": "^1.69.7",
     "sass-loader": "^14.1.1",
     "stylelint": "^16.2.0",
-    "stylelint-config-recess-order": "^4.4.0",
+    "stylelint-config-recess-order": "^5.0.0",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
@@ -71,6 +71,9 @@
     "ress": "^5.0.2",
     "snakecase-keys": "^6.0.0",
     "vite-svg-loader": "^5.1.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   },
   "engines": {
     "node": "^20.11.x",
