cache しないよう修正

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -14,11 +14,11 @@ jobs:
         node-version: [20.12.1]
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
+      # - name: Use Node.js ${{ matrix.node-version }}
+      #   uses: actions/setup-node@v4
+      #   with:
+      #     node-version: ${{ matrix.node-version }}
+      #     cache: "npm"
       - name: Install dependencies
         run: npm ci
       - name: Run Build (and Type Check)
@@ -37,11 +37,11 @@ jobs:
         node-version: [20.12.1]
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
+      # - name: Use Node.js ${{ matrix.node-version }}
+      #   uses: actions/setup-node@v4
+      #   with:
+      #     node-version: ${{ matrix.node-version }}
+      #     cache: "npm"
       - name: Install dependencies
         run: npm ci
       - name: Run VRT Build
