--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -18,9 +18,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      #     cache: "npm"
+          cache: "npm"
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Run Build (and Type Check)
         run: npm run build
       - name: Run lint
@@ -41,9 +41,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      #     cache: "npm"
+          cache: "npm"
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Run VRT Build
         run: npm run build:vrt
       - name: Install Playwright Browsers
