--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build --dotenv .env",
-    "build:vrt": "VRT=true npm run build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -18,23 +17,19 @@
     "format:d": "dprint fmt",
     "format:e": "npm run lint:e -- --fix",
     "format:s": "npm run lint:s -- --fix",
-    "test:ut": "vitest run",
-    "test:vrt": "playwright test -c playwright-vrt.config.ts",
-    "test:vrt:us": "npm run test:vrt -- --update-snapshots",
-    "test:vrt:ui": "npm run test:vrt -- --ui"
+    "test:ut": "vitest run"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.3.10",
     "@nuxt/image": "^1.6.0",
-    "@nuxt/test-utils": "^3.10.0",
-    "@playwright/test": "^1.43.1",
-    "@types/node": "^20.11.29",
+    "@nuxt/test-utils": "^3.13.1",
+    "@types/node": "^20.14.10",
     "@typescript-eslint/parser": "^7.8.0",
     "@vitest/coverage-v8": "^1.2.2",
     "@vue/test-utils": "^2.4.4",
     "@vueuse/core": "^10.7.2",
-    "@vueuse/nuxt": "^10.7.2",
-    "dprint": "^0.45.0",
+    "@vueuse/nuxt": "^10.11.0",
+    "dprint": "^0.47.0",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -42,15 +37,13 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-security": "^3.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "happy-dom": "^13.7.8",
+    "happy-dom": "^14.12.3",
     "msw": "^2.2.1",
     "nuxt": "^3.11.1",
-    "playwright-core": "^1.43.1",
-    "playwright-msw": "^3.0.1",
     "postcss": "^8.4.34",
     "postcss-html": "^1.6.0",
     "postcss-scss": "^4.0.9",
-    "sass": "^1.75.0",
+    "sass": "^1.77.6",
     "sass-loader": "^14.1.1",
     "stylelint": "^16.2.0",
     "stylelint-config-recess-order": "^5.0.0",
@@ -63,7 +56,7 @@
     "vitest": "^1.2.2",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^2.0.26"
   },
   "dependencies": {
     "camelcase-keys": "^9.1.3",
@@ -73,7 +66,7 @@
     "vite-svg-loader": "^5.1.0"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.17.2"
+    "@rollup/rollup-linux-x64-gnu": "4.18.1"
   },
   "engines": {
     "node": "^20.12.x",
